--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <style>
+    #search-results tr:hover {
+      background-color: lightgrey;
+      cursor: pointer;
+    }
+  </style>
   <title>YO</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -41,6 +47,13 @@
             parsed.forEach(function(result) {
               var row = $("<tr><td>" + result.Title + "</td><td>" + result.Author + "</td><td>" + result.Year + "</td><td>" + result.ID + "</td></tr>");
               searchResults.append(row);
+              row.on("click", function() {
+                $.ajax({
+                  url: "/books/add?id=" + result.ID,
+                  method: "GET"
+                })
+              }
+              )
             })
           }
         });
